# droppable-rust-icons

./: Cargo.toml
assets/: rust_cog.gltf
src/: main.rs
