[package]
name = "droppable-rust-icons"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.15.0-rc.3"
avian3d = { git = "https://github.com/Jondolf/avian", branch = "main" }
rand = "0.8.5"
crossbeam = "0.8"
